# csv-lsp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: architecture.md  contributing.html  development.md  docs.js  features.html  index.html  lsp.html  parser.html  quickstart.html  style.css  testing.html
docs/adr/: 0001-rust-over-zig.md  0002-lsp-server-and-lsp-types.md  0003-custom-error-tolerant-parser.md  0004-property-based-testing-with-proptest.md
docs/gifs/: README.md
docs/gifs/samples/: columns.csv  highlight.csv  inventory.csv  messy.csv  preise.csv  quotes.csv
docs/gifs/tapes/: align-compact.tape  columns.tape  diagnostics.tape  pad-rows.tape  quote.tape  reinterpret-convert.tape  select-column.tape
docs/plan/: m0-scaffold.md  m1-parser-and-diagnostics.md  m2-pad-quickfix.md  m3-align-compact.md  m4-dialect-actions.md  m5-quote-cells.md  m6-column-edits.md  m7-document-highlight.md
src/: capabilities.rs  dialect.rs  document.rs  edits.rs  lib.rs  main.rs  parse.rs  position.rs  render.rs  server.rs
src/features/: align.rs  columns.rs  compact.rs  mod.rs  pad_rows.rs  parse_errors.rs  quote.rs  ragged_rows.rs  reinterpret.rs  transform.rs
tests/: e2e.rs  properties.rs  protocol.rs  stdio.rs
tree-sitter-rainbow-csv/: README.md  grammar.js
tree-sitter-rainbow-csv/queries/: highlights.scm
tree-sitter-rainbow-csv/src/: grammar.json  node-types.json  parser.c
