[package]
name = "csv-lsp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Language server for CSV/TSV/SSV files: diagnostics, quickfixes, column alignment"
repository = "https://github.com/tammoippen/csv-lsp"
license = "MIT"
keywords = ["lsp", "language-server", "csv", "tsv"]
categories = ["development-tools"]

[dependencies]
lsp-server = "0.8"
lsp-types = "0.97"
serde_json = "1"
unicode-width = "0.2"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
